--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,16 @@
 }
 
 .main {
-  width: 100%;
+  margin: 0 auto;
   max-width: 800px;
   padding: 2em;
+}
+
+.main img {
+  max-width: 100%;
+}
+
+.narrow-content {
+  max-width: 400px;
+  margin: 0 auto;
 }
